# comic-alpha

./: .gitignore  README.md  README_zh.md  index.html  start.bat  start.sh
assets/: README.md
backend/: app.py  comic_generator.py  pyproject.toml
backend/controllers/: image_controller.py
backend/services/: comic_service.py  image_service.py
frontend/css/: style.css
frontend/js/: api.js  app.js  i18n.js  sessionManager.js
