[project]
name = "comic-alpha-backend"
version = "0.1.0"
description = "Backend service for Comic Alpha"
requires-python = ">=3.10"
dependencies = [
    "Flask==3.0.0",
    "flask-cors==4.0.0",
    "python-dotenv==1.0.0",
    "httpx==0.28.1",
    "requests==2.31.0",
    "google-genai==1.54.0",
    "pillow==12.0.0",
    "langchain-openai>=1.1.6",
]
